fixed text align for slogan on mobile

--- a/css/mobile-styles.css
+++ b/css/mobile-styles.css
@@ -43,6 +43,10 @@
 		height: auto;
 	}
 
+	#slogan-container {
+		margin-left: auto;
+		text-align: center;
+	}
 	#slogan, #sub-slogan {
 		font-weight: 100;
 		font-size: 1.4rem;		
@@ -51,6 +55,8 @@
 		padding-top: 1rem;
 	}
 	#slogan-intro {
+		text-align: left;
+		margin-left: 2rem;
 		font-size: 1.5rem;
 	}
 
